# metuur-squirrel

./: .gitignore  .graphifyignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.toml
.agents/: uncle-dev-setup.yaml
.codex/agents/: tauri-v2-expert.toml
.uncle-dev/learns/: copilot-agent-integration.md  runtime-trust-handshake.md
.uncle-dev/research/: 2026-05-28-focus-selection-today-and-week.md  2026-05-29-am-pm-focus-and-sqlite.md  2026-05-29-future-reminders-and-scratch-pad.md  2026-05-29-project-and-task-creation-from-web-ui.md  2026-05-30-in-app-notification-center.md
agent-pack/: INSTALL-README.md  INSTALL.md  install.sh
agent-pack/.claude-plugin/: plugin.json
agent-pack/commands/: sq-brief.md  sq-capture.md  sq-chunk-intent.md  sq-chunk.md  sq-dashboard.md  sq-decision.md  sq-end.md  sq-estimate.md  sq-focus.md  sq-init.md  sq-migrate-vault.md  sq-new-project.md  sq-parakeet.md  sq-recover.md  sq-reminders-install.md  sq-reminders.md  sq-start.md  sq-status.md  sq-sync-in.md  sq-sync-out.md  sq-task-initiation.md  sq-where-am-i.md
apps/backend/: README.md  cache.py  pyproject.toml  server.py
apps/backend/app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
apps/backend/app/graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.json
apps/backend/app/public/: manifest.json
apps/backend/app/src/: App.tsx  index.css
apps/backend/app/src/api/: client.ts
apps/backend/app/src/components/: ApiActivity.tsx  CaptureModal.tsx  ConflictDialog.tsx  FocusPickerModal.tsx  Markdown.tsx  MarkdownEditor.tsx  Modal.tsx  NewProjectModal.tsx  NewTaskModal.tsx  NotificationCenter.tsx  ProjectSelectorModal.tsx  PromptPanel.tsx  QuickTaskPopover.tsx  RemindersWidget.tsx  Toast.tsx  VaultRecovery.tsx
apps/backend/app/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
apps/backend/app/src/hooks/: useFetch.ts  useMe.ts  useNotifications.ts  usePostIts.ts  useQuickTasks.ts
apps/backend/app/src/lib/: utils.ts
apps/backend/app/src/pages/: DeadlinesPage.tsx  GuidePage.tsx  HistoryPage.tsx  HomePage.tsx  JournalPage.tsx  NoteEditPage.tsx  NotePage.tsx  PostItsPage.tsx  ProjectEditPage.tsx  ProjectPage.tsx  SettingsPage.tsx
apps/backend/launchd/: install.sh  plist.template
apps/cli/: pyproject.toml  squirrel
apps/cli/lib/: capture_writer.py  chunk_helper.py  config_loader.py  dashboard_generator.py  db.py  deadline_scanner.py  estimate_buffer.py  focus_cli.py  focus_picker.py  fs_atomic.py  intent_parser.py  manifest_writer.py  mind_journal.py  new_project_writer.py  package_protocol.py  post_it_scanner.py  post_it_writer.py  quick_task_scanner.py  quick_task_writer.py  reminder_scanner.py  reminder_writer.py  session_scanner.py  status_aggregator.py  switch_tracker.py  tag_parser.py  vault_migrator.py  vocabulary.py  where_am_i_formatter.py
apps/cli/tests/: test_active_intent_for.py  test_api_me_dev_flag.py  test_attn_chunk.py  test_attn_estimate.py  test_attn_focus.py  test_backend_cache.py  test_backend_log_rotation.py  test_capture_writer.py  test_compose_deeplink.sh  test_config_loader.py  test_config_vault_api.py  test_db.py  test_docs_multi_vault.py  test_emit_banner.sh  test_emitters.sh  test_env_obsidian.py  test_estimate_reconciliation.py  test_focus_picker.py  test_foundation.py  test_fs_atomic.py  test_journal_api.py  test_mind_journal.py  test_notifications_settings.py  test_package_protocol.py  test_post_it_api.py  test_post_it_db.py  test_post_it_isolation.py  test_post_it_scanner.py  test_post_it_writer.py  test_quick_task_collect.py  test_quick_task_isolation.py  test_quick_task_scanner.py  test_quick_task_writer.py  test_quick_task_writer_ops.py  test_quick_tasks_api.py  test_regression_existing.py  test_regression_single_vault.py  test_remigration_robustness.py  test_reminder_daemon.sh  test_reminder_scanner.py  (+24 more)
apps/cli/tests/fixtures/vault-minimal/01-Active-Projects/: README.md
apps/cli/tests/fixtures/vault-minimal/01-Active-Projects/SCRATCH-PAD/: MIND-JOURNAL.md
apps/cli/tests/fixtures/vault-minimal/01-Active-Projects/SIDEPROJECT-STALE/: SIDEPROJECT-STALE.md
apps/cli/tests/fixtures/vault-minimal/01-Active-Projects/TEST-PROJECT/: TEST-PROJECT.md
apps/cli/tests/fixtures/vault-minimal/01-Proyectos-Activos/SCRATCH-PAD/: SCRATCH-PAD.md
apps/cli/tests/fixtures/vault-minimal/01-Proyectos-Activos/SIDEPROJECT-STALE/: SIDEPROJECT-STALE.md
apps/cli/tests/fixtures/vault-minimal/01-Proyectos-Activos/TEST-PROJECT/: TEST-PROJECT-AUTH-001.md  TEST-PROJECT-AUTH-002.md  TEST-PROJECT.md
apps/cli/tests/fixtures/vault-minimal/02-Parking-Lot/: README.md
apps/cli/tests/fixtures/vault-minimal/03-Areas/: README.md
apps/cli/tests/fixtures/vault-minimal/06-Archive/: README.md
apps/cli/tests/fixtures/vault-minimal/99-Resources/: README.md
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: backend_supervisor.rs  deep_link.rs  lib.rs  logging.rs  main.rs  notif_identity.rs  obsidian_registry.rs  tray.rs  tray_alerts.rs
dmg-staging/: Install Squirrel
docs/: bug-hunt-2026-06-10.md  install.md  release.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_chunks.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.json
installer/: install-manual.sh  install-snapshot.sh  install.sh  uninstall.sh
landing/: app.js  demo.html  demoCodex.html  demoNoWebGL.html  demoOriginal.html  index-old.html  styles.css
scripts/: build-dmg.sh  build-manual-zip.sh  build-pkg.sh  bump_version.py  deploy-landing.sh  publish-ghcr.sh  publish-npm.sh  publish-release.sh  publish.sh  update-landing-download.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logging.rs  tray.rs
src-tauri/tests/: tray_icons.rs
src/lib/: plugins.ts
(+381 files in other folders)
