[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squirrel-backend"
version = "0.8.6"
description = "Squirrel local web UI — JSON API + SPA shell"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Javier Benavides", email = "javierhbr@gmail.com" }]
# server.py uses Python stdlib only and imports squirrel-cli's lib/ at runtime
# via sys.path (see server.py:39-41). For a proper editable install:
#   pip install -e ../cli && pip install -e .
dependencies = ["squirrel-cli==0.5.0"]

[project.urls]
Source = "https://github.com/javierbenavides/squirrel"

[tool.setuptools]
py-modules = ["server"]
