[package]
name = "squirrel"
version = "0.1.0"
description = "Squirrel — local-first focus & productivity companion"
authors = ["Javier Benavides <javierhbr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "squirrel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
# Used by backend_supervisor to spawn the bundled `squirrel-backend` sidecar
# (R-9.1/R-9.2). Without this plugin the supervisor stays in Adopted/Failed
# mode and never owns the backend lifecycle.
tauri-plugin-shell = "2"
# Powers the "Restart Squirrel" button in BackendStatusBanner so end users
# can recover from a stuck-backend state without a terminal.
tauri-plugin-process = "2"
url = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
# Native folder picker for first-run vault onboarding (in-app-vault-onboarding
# story 1.4). open({ directory: true }) from the OnboardingWizard.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
dirs = "5"
# HTTP client for the tray-alerts background poller (Phase 2 R-2.5 successor).
# rustls-tls keeps build self-contained; no openssl/libsystem dep.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["time"] }
# Runtime Trust Handshake (docs/ears/runtime-trust-handshake.md, R-1.1, R-2.7).
# rand: CSPRNG via OsRng for the per-launch token.
# subtle: constant-time token comparison on the adoption probe (Unit 4).
rand = "0.8"
subtle = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"

[target.'cfg(unix)'.dependencies]
# Used by backend_supervisor::shutdown to send SIGTERM and poll for child
# exit before falling back to SIGKILL. tauri-plugin-shell's CommandChild::kill
# is SIGKILL-only on Unix; libc gives us the graceful-shutdown signal.
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3.2", features = ["NSData"] }

[dev-dependencies]
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
